[package]
name = "meshcore-keygen"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
curve25519-dalek = "4.1"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
sha2 = "0.10"

# Performance and concurrency
rayon = "1.8"
crossbeam = "0.8"

# Utilities
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Secure memory handling
zeroize = { version = "1.7", features = ["zeroize_derive"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3

[[bin]]
name = "meshcore-keygen"
path = "src/main.rs"